<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
      android:id="@+id/example_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_1"/>

    <Button
      android:id="@+id/example_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_2" />

    <Button
      android:id="@+id/example_3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_3" />

    <Button
      android:id="@+id/example_4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_4"/>

    <Button
      android:id="@+id/example_5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_5" />

    <Button
      android:id="@+id/example_6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/example_6" />

  </LinearLayout>
</ScrollView>